@@ -8,6 +8,7 @@ var charsetWidth : array [0..255] of byte;
     charsetData: array [0..2047] of byte;
 
 function loadCharset(filename : String): boolean;
+function loadLegacyCharset(filename: String): boolean;
 
 implementation
 
@@ -28,6 +29,24 @@ begin
         loadCharset := true;
     end;
 end;
+
+function loadLegacyCharset(filename: String): boolean;
+var charsetFile : file;
+    bytesRead: longint;
+    var i : Byte;
+begin
+    loadLegacyCharset := false;
+    Assign(charsetFile, filename);
+    Reset(charsetFile, 1);
+    if (ioresult = 0) then
+    begin
+        BlockRead(charsetFile, charsetData, sizeof(charsetData));
+        Close(charsetFile);
+        for i:= 0 to 255 do charsetWidth[i] := 6;
+        loadLegacyCharset := true;
+    end;
+end;
+
 
 
 end.
